[package]
name = "arbiter"
version = "0.1.0"
authors = ["Joe Frikker <jfrikker@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
bytes = "0.4"
linked-hash-map = "0.5"
log = "0.4"
prost = "0.5"
stderrlog = "0.4"
tokio = "0.1"
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc" }
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc" }